docs(card): fix card overflowing on smaller screens (#9593)

--- a/src/material-examples/card-fancy/card-fancy-example.css
+++ b/src/material-examples/card-fancy/card-fancy-example.css
@@ -1,5 +1,5 @@
 .example-card {
-  width: 400px;
+  max-width: 400px;
 }
 
 .example-header-image {
